WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279441
FetchBodyOwner should not be GCed if its FormDataConsumer is reading a blob or a file
https://bugs.webkit.org/show_bug.cgi?id=279441
Summary
FetchBodyOwner should not be GCed if its FormDataConsumer is reading a blob o...
youenn fablet
Reported
2024-09-10 06:35:55 PDT
FetchBodyOwner should not be GCed if its FormDataConsumer is reading a blob or a file
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-10 06:36:07 PDT
<
rdar://problem/135704806
>
youenn fablet
Comment 2
2024-09-10 06:55:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33399
youenn fablet
Comment 3
2024-09-10 08:42:27 PDT
<
rdar://135355235
>
EWS
Comment 4
2024-09-10 11:12:45 PDT
Committed
283430@main
(f63e77117fca): <
https://commits.webkit.org/283430@main
> Reviewed commits have been landed. Closing PR #33399 and removing active labels.
EWS
Comment 5
2024-09-13 13:46:12 PDT
Committed
283286.39@safari-7620-branch
(67d50a230202): <
https://commits.webkit.org/283286.39@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1729 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug